
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "megger-smrt46-python-driver"
version = "0.1.0"
description = "Python driver and communication library for Megger SMRT46 relay test set automation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "ruff>=0.11,<1",
]

[tool.setuptools]
packages = ["smrt46_client", "tools"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["smrt46_client", "tests", "tools"]

[tool.ruff.lint]
select = ["B", "E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402"]

[tool.mypy]
python_version = "3.9"
files = ["smrt46_client", "tests", "tools"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
